# fragnix-server

./: README.md  fragnix-server.cabal  fragnix-server.hs  generate-sites.hs  index.html  stack.yaml
client/: Main.elm  index.html
data/environments/scotty/: Blaze.ByteString.Builder  Blaze.ByteString.Builder.ByteString  Blaze.ByteString.Builder.Char.Utf8  Blaze.ByteString.Builder.Char8  Blaze.ByteString.Builder.Compat.Write  Blaze.ByteString.Builder.HTTP  Blaze.ByteString.Builder.Html.Utf8  Blaze.ByteString.Builder.Int  Blaze.ByteString.Builder.Internal.Write  Blaze.ByteString.Builder.Word  Codec.Compression.GZip  Codec.Compression.Zlib  Codec.Compression.Zlib.Internal  Codec.Compression.Zlib.Raw  Codec.Compression.Zlib.Stream  Control.Applicative.Backwards  Control.Applicative.Lift  Control.AutoUpdate  Control.Concurrent.Async  Control.Concurrent.Chan.Lifted  Control.Concurrent.Lifted  Control.Concurrent.MVar.Lifted  Control.Concurrent.QSem.Lifted  Control.Concurrent.QSemN.Lifted  Control.Concurrent.STM  Control.Concurrent.STM.TArray  Control.Concurrent.STM.TBQueue  Control.Concurrent.STM.TChan  Control.Concurrent.STM.TMVar  Control.Concurrent.STM.TQueue  Control.Concurrent.STM.TSem  Control.Concurrent.STM.TVar  Control.Debounce  Control.DeepSeq  Control.Exception.Lifted  Control.Monad.Base  Control.Monad.Catch  Control.Monad.Catch.Pure  Control.Monad.Cont  Control.Monad.Error  (+599 more)
data/environments/text/: Data.Text  Data.Text.Internal  Data.Text.Internal.Builder.Int.Digits  Data.Text.Internal.Encoding.Fusion  Data.Text.Internal.Encoding.Utf32  Data.Text.Internal.Functions  Data.Text.Internal.Fusion.CaseMapping  Data.Text.Internal.Fusion.Common  Data.Text.Internal.Fusion.Types  Data.Text.Internal.Lazy.Encoding.Fusion  Data.Text.Internal.Lazy.Fusion  Data.Text.Internal.Lazy.Search  Data.Text.Internal.Read  Data.Text.Internal.Search  Data.Text.Internal.Unsafe.Shift  Data.Text.Lazy  Data.Text.Lazy.Builder.RealFloat  Data.Text.Lazy.Encoding  Data.Text.Lazy.Internal  Data.Text.Unsafe
data/slices/: 1000890258078097160  1001254232066604428  1001372143873265516  1002108123223720307  10028706399109193  1003427505070580460  1003693900075091327  100452691171660451  1004526992446670376  1004701312992819703  1005227110059590115  1005538005003626544  1005552312878241723  1006688544674411863  1008626907939011545  1008871928845829848  1009439551528152510  10100063299243965  101209229218377705  1012167895709838013  1013809466628527153  1015109242432907180  1015219542100580856  1015249985107491138  1015637007678886302  1015694043637836366  1017727154308844944  1018712828573608505  1019142935356398673  1019482563193416814  1020423013701560689  102070505228306617  1021257552308035802  102130355069532131  1021432062041860732  1021798380154056785  1022227438776770134  1022767161998337052  1023444637211363266  1025236259979432211  (+12831 more)
executable-src/: Main.hs
graph/: graph.json  index.html
src/: FragnixServer.hs  fragnix-server.hs
