name:                fragnix-server
version:             0.1.0.0
synopsis:            Serves slices.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable fragnix-server
  main-is:             fragnix-server.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.7 && <4.9,
                       scotty >=0.9.1 && <0.10,
                       directory >=1.2.1.0 && <1.3,
                       filepath >=1.3.0.2 && <1.4,
                       blaze-html >=0.8.1.0 && <0.9,
                       text >=1.2.0.4 && <1.3
  hs-source-dirs:      src
  default-language:    Haskell2010
