name:                fragnix-server
version:             0.1.0.0
synopsis:            Serves slices.
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Philipp Schuster
maintainer:          pschuster@uni-koblenz.de
-- copyright:           
category:            Distribution
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:     FragnixServer
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       fragnix >=0.1.0.0 && <0.2,
                       servant-server >=0.11 && <0.12,
                       haskell-src-exts >=1.19.1 && <1.20,
                       haskell-names >=0.9.0 && <0.10,
                       aeson >=1.0.2.1 && <1.3,
                       directory >=1.2.1.0 && <1.4,
                       filepath >=1.4.1.1 && <1.5,
                       blaze-html >=0.9.0.1 && <0.10,
                       text >=1.2.2.2 && <1.3,
                       containers >=0.5.7.1 && <0.6,
                       transformers >=0.5.2.0 && <0.6
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2

 

executable fragnix-server
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       warp >=3.2.13 && <3.3,
                       fragnix-server
  hs-source-dirs:      executable-src
  default-language:    Haskell2010

